# zain

./: .gitignore  Cargo.toml  FAQ-Completo.md  Makefile  README.md  STATE_MACHINE.md  build.sh  faq.completo.md  flake.nix
.claude/: settings.json
FAQ/: 01-antes-da-formalizacao.md  02-formalizacao.md  03-alvaras-e-licencas.md  04-nota-fiscal.md  05-o-que-e-mei.md  06-previdencia-social.md  07-seguro-desemprego.md  08-pagamento-mensal-das.md  09-mei-caminhoneiro.md  10-empregado-do-mei.md  11-alteracao-cadastral.md  12-baixa-do-mei.md  13-desenquadramento.md  14-cursos-e-capacitacao.md  15-debito-automatico-pagamento-online.md  16-divida-ativa.md  17-restituicao.md  18-dasn-simei-declaracao.md  19-parcelamento-rfb.md  20-cancelamento-mei.md  21-mei-rural.md  22-salao-parceiro.md  23-forma-de-atuacao.md  24-nome-social.md  25-obito-de-mei.md  26-anulacao-cnpj.md  27-seguranca-saude-trabalho.md  28-programa-cred-mais.md  29-esocial-mei.md  30-bolsa-familia.md  31-cadastur.md  32-outros-assuntos.md  33-glossario.md
crates/agent/: Cargo.toml
crates/agent/src/: dispatch.rs  govbr_validator.rs  history.rs  lib.rs  llm.rs  main.rs  prompt.rs  tools.rs  validators.rs  workflow.rs
crates/agent/src/states/: lead.rs  mod.rs  recusado.rs  stub.rs
crates/agent/src/tools/: abrir_empresa.rs  anotar.rs  buscar_cnae.rs  buscar_cnae_por_atividade.rs  consultar_cnae_por_codigo.rs  consultar_divida_pgfn.rs  consultar_simei_cnpj.rs  done.rs  govbr.rs  iniciar_pagamento.rs  mod.rs  pgfn.rs  recusar_lead.rs  save_atividade.rs  save_cnpj.rs  save_cpf.rs  save_endereco.rs  save_quer_abrir_mei.rs  send_ccmei.rs  send_whatsapp_message.rs  set_atividade.rs  set_cnpj.rs  set_dados_pessoais.rs  set_endereco.rs  set_gov_br.rs  set_tem_mei.rs  wait_client_message.rs
crates/ai/: Cargo.toml
crates/chromium-driver/: Cargo.toml  build.rs
crates/chromium-driver/examples/: launch_probe.rs
crates/chromium-driver/src/: browser.rs  discovery.rs  dom.rs  error.rs  frame.rs  keyboard.rs  lib.rs  page.rs  process.rs  runtime.rs  session.rs  target.rs  transport.rs  types.rs
crates/chromium-driver/src/cdp/: CONVENTIONS.md  _fetch_protocol_json.py  accessibility.json  animation.json  audits.json  autofill.json  backgroundservice.json  bluetoothemulation.json  browser.json  browser.rs  cachestorage.json  cast.json  common.rs  console.json  crashreportcontext.json  css.json  debugger.json  deviceaccess.json  deviceorientation.json  dom.json  dom.rs  domdebugger.json  domsnapshot.json  domstorage.json  emulation.json  emulation.rs  eventbreakpoints.json  extensions.json  fedcm.json  fetch.json  filesystem.json  headlessexperimental.json  heapprofiler.json  indexeddb.json  input.json  input.rs  inspector.json  io.json  io.rs  layertree.json  (+30 more)
crates/chromium-driver/tests/: dom_integration.rs  ergonomics.rs  fingerprint_probe.rs  frame_integration.rs  integration.rs  io_integration.rs  stealth_integration.rs
crates/dados-abertos/: .gitignore  Cargo.toml
crates/dados-abertos/sql/: cnae.sql  cno.sql  cnpj.sql  mei_cnaes.sql  pgfn.sql
crates/dados-abertos/src/: db.rs  download.rs  embedding.rs  import.rs  main.rs  schema.rs  source.rs
crates/dados-abertos/src/sources/: cnae.rs  cno.rs  cnpj.rs  mei_cnaes.rs  mod.rs  pgfn.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client_state.rs  errlog.rs  main.rs  meta.rs  server.rs  state.rs  validators.rs
crates/mcp/src/jobs/: das_refresh.rs  dasn_refresh.rs  mei_refresh.rs  mod.rs  refresh.rs
crates/mcp/src/resources/: ccmei.rs  mod.rs
crates/mcp/src/tools/: abrir_empresa.rs  buscar_cnae.rs  das.rs  dasn.rs  get_ccmei.rs  get_client_state.rs  govbr.rs  iniciar_pagamento.rs  mod.rs  pgfn.rs  recusar_lead.rs  save_cpf.rs  save_quer_abrir_mei.rs
crates/ollama/: Cargo.toml
crates/rpa/: Cargo.toml  FLUXOS.md
crates/rpa-mei/: Cargo.toml
crates/rpa-mei/src/: consulta.rs  lib.rs  main.rs
crates/rpa/examples/: dasn_consultar.rs  dasn_probe.rs  govbr_probe.rs  govbr_steps.rs  govbr_watch.rs  nopecha_setup.rs  pgmei_das.rs  pgmei_probe.rs
crates/rpa/src/: captcha.rs  lib.rs  main.rs  sanity.rs
crates/rpa/src/dasn/: mod.rs
crates/rpa/src/govbr/: db.rs  extension.rs  flow.rs  launch.rs  mod.rs  session.rs
crates/rpa/src/mei/: certificado.rs  consulta.rs  inscricao.rs  mod.rs
crates/rpa/src/pgfn/: consulta.rs  mod.rs
crates/rpa/src/pgmei/: mod.rs
crates/unused-whatsapp/: Cargo.toml
crates/unused-whatsapp/migrations/: 0001_create_accounts.sql  0003_create_chats_and_messages.sql
crates/unused-whatsapp/src/: chat.rs  client.rs  error.rs  lib.rs  main.rs  message.rs  profile.rs  qr.rs  types.rs
crates/whatsapp/: Cargo.toml
crates/whatsapp/migrations/: 0002_create_chats.sql  0002_rename_avatar_url_to_avatar.sql  0003_create_messages.sql  0004_message_columns.sql  0004_timestamp_to_timestamptz.sql  0005_sticker_media.sql  0006_image_media.sql
crates/whatsapp/src/: chat.rs  client.rs  domains.rs  event_processor.rs  lib.rs  main.rs  message.rs  outbox.rs  profile.rs  qr.rs  types.rs  webhook.rs
migrations/: 0001_create_whatsapp_schema.sql  0001_whatsapp.sql  0002_create_outbox.sql  0002_zain.sql  0003_create_zain_schema.sql  0003_webhook_entities.sql  0004_create_clients.sql  0004_group_participants.sql  0005_create_executions.sql  0005_timestamps_and_processing.sql  0006_create_cnpj_schema.sql  0006_history_starts_at.sql  0007_create_cnae_schema.sql  0008_audio_transcriptions.sql  0008_create_mei_cnaes_schema.sql  0009_outbox_notify.sql  0010_clients_notify.sql  0010_create_webhooks.sql  0011_govbr.sql  0012_govbr_client_id.sql  0013_simplify_state.sql  0014_govbr_into_clients.sql  0015_props_into_columns.sql  0016_pgfn_cache.sql  0017_simei_cache.sql  0018_quer_abrir_mei.sql  0019_drop_atividade_descricao.sql  0020_drop_govbr_otp.sql  0021_drop_cnae_and_endereco.sql  0022_mei_columns.sql  0023_chat_id_nullable.sql  0024_drop_whatsapp.sql  0025_mei_refresh.sql  0026_mei_refresh_backoff.sql  0027_das_mensal.sql  0028_dasn_anual.sql  0029_dasn_evento_baixa.sql  0030_das_guia_cache.sql  0031_last_activity.sql  0032_das_parcelado.sql  (+1 more)
(+50 files in other folders)
