[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"

[patch."ssh://git@github.com/lbguilherme/cubos_sql.git"]
cubos_sql = { path = "../cubos_rust_libs/cubos_sql/cubos_sql" }
cubos_sql_macros = { path = "../cubos_rust_libs/cubos_sql/cubos_sql_macros" }
cubos_sql_core = { path = "../cubos_rust_libs/cubos_sql/cubos_sql_core" }
cubos_sql_analyzer = { path = "../cubos_rust_libs/cubos_sql/cubos_sql_analyzer" }
