[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"

# [patch."ssh://git@github.com/cubos/pgsafe.git"]
# pgsafe = { path = "../cubos_rust_libs/pgsafe/pgsafe" }
# pgsafe_macros = { path = "../cubos_rust_libs/pgsafe/pgsafe_macros" }
# pgsafe_core = { path = "../cubos_rust_libs/pgsafe/pgsafe_core" }
# pgsafe_analyzer = { path = "../cubos_rust_libs/pgsafe/pgsafe_analyzer" }
