[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
cubos_sql = { git = "ssh://git@github.com/lbguilherme/cubos_sql.git", branch = "main" }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
rpa-mei = { path = "../rpa-mei" }

[package.metadata.cubos_sql.database]
migrations = "../../migrations"
analysis_mode = "static"
