[package]
name = "chromium-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["process", "sync", "rt", "macros", "time", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["connect"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
base64 = "0.22"
rand = "0.10"
rand_distr = "0.6"
