[package]
name = "dados-abertos"
version = "0.1.0"
edition = "2024"

[package.metadata.cubos_sql.database]
migrations = "../../migrations"
extra_schema_migrations = ["sql"]

[dependencies]
anyhow = "1"
dotenvy = "0.15"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
cubos_sql = { git = "ssh://git@github.com/lbguilherme/cubos_sql.git", branch = "main", default-features = false }
encoding_rs = "0.8"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4"] }
zip = "8"
