[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
pgsafe = { git = "ssh://git@github.com/cubos/pgsafe.git", branch = "main" }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ai = { path = "../ai" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
rpa = { path = "../rpa" }
pgvector = { version = "0.4", features = ["postgres", "halfvec"] }
half = "2"
schemars = "1"
base64 = "0.22"

rmcp = { version = "1.6", features = [
    "server",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
axum = "0.8"
tower-service = "0.3"

[package.metadata.pgsafe.database]
migrations = "../../migrations"
extra_migrations = ["../dados-abertos/sql"]

[package.metadata.pgsafe.types]
"zain.govbr_nivel" = "::rpa::govbr::Nivel"
"zain.govbr_session" = "::rpa::govbr::session::SavedSession"
"zain.mei_ccmei" = "::rpa::mei::CertificadoMei"
