[package]
name = "rpa"
version = "0.1.0"
edition = "2024"

[dependencies]
ai = { path = "../ai" }
chromium-driver = { path = "../chromium-driver" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
pgsafe = { git = "ssh://git@github.com/cubos/pgsafe.git", branch = "main" }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
lopdf = "0.41"

[package.metadata.pgsafe.database]
migrations = "../../migrations"
extra_migrations = ["../dados-abertos/sql"]

[package.metadata.pgsafe.types]
"zain.govbr_nivel" = "::rpa::govbr::Nivel"
"zain.govbr_session" = "::rpa::govbr::session::SavedSession"
"zain.mei_ccmei" = "::rpa::mei::CertificadoMei"
