[package]
name = "unused-whatsapp"
version = "0.1.0"
edition = "2024"

[dependencies]
chromium-driver = { path = "../chromium-driver" }
cubos_sql = { path = "../../../cubos_rust_libs/cubos_sql/cubos_sql" }
cubos_sql_core = { path = "../../../cubos_rust_libs/cubos_sql/cubos_sql_core" }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rqrr = { version = "0.10", default-features = false }
png = "0.18"
base64 = "0.22"
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
dotenvy = "0.15"
qr2term = "0.3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[package.metadata.cubos_sql.database]
migrations = "./migrations"
